# chexss

./: .gitignore  Chexss.sln  README.md
chexss/: .mypy.ini  check.sh  pyproject.toml
chexss/src/: board_colors.py  board_image.py  drawer_utils.py  hex_image.py  hex_meta.py  image_factory_utils.py  math_utils.py  rbg_color.py
chexss/src/board/: algebraic_coordinate.py  board.py  board_colors.py  board_coordinate.py  board_coordinate_utils.py  board_drawer.py  board_image.py  board_state.py  board_state_utils.py  coordinate_converter.py  direction_iterator.py  direction_utils.py  drawer_utils.py  hex_image.py  hex_meta.py  image_factory_utils.py  test_algebraic_coordinate.py  test_coordinate_converter.py  test_direction_iterator.py
chexss/src/diagram/: algebraic_coordinate_image_factory.py  capturing_move_image_factory.py  cube_coordinate_image_factory.py  diagram_generator.py  diagram_generator_utils.py  image_factory.py  piece_image_factory.py  test_diagram_generator.py  valid_move_image_factory.py
chexss/src/pieces/: bishop.py  bishop_image.py  king.py  king_image.py  knight.py  knight_image.py  move_utils.py  pawn.py  pawn_image.py  piece.py  piece_color.py  piece_info.py  piece_type.py  piece_utils.py  player.py  queen.py  queen_image.py  rook.py  rook_image.py  test_bishop.py  test_king.py  test_knight.py  test_pawn.py  test_queen.py  test_rook.py
chexss/src/utils/: math_utils.py  rgb_color.py  test_math_utils.py
scripts/image_generator/: .mypy.ini  pyproject.toml
scripts/image_generator/src/: board_coordinate_utils.py  board_coordinates.py  hex_image.py  (+3 more)
(+2 files in other folders)
